<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rectangle"
    tools:context=".Authentication">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent">

    </LinearLayout>
<androidx.core.widget.ContentLoadingProgressBar
    android:layout_width="wrap_content"
    android:visibility="gone"
    android:id="@+id/loader"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_height="wrap_content"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="320dp"
        app:cardCornerRadius="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wellcome_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/subTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="@dimen/dimen_20dp"
                android:textStyle="normal"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <LinearLayout
                android:id="@+id/form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:orientation="vertical"
                android:padding="@dimen/activity_vertical_margin"
                app:layout_constraintTop_toBottomOf="@+id/subTitle">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/activity_vertical_margin"
                    android:background="@drawable/inputbackground"
                    android:hint="@string/email"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimary"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/dimen_10dp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:textColor="@color/colorPrimaryDark"
                    android:background="@drawable/inputbackground"
                    android:hint="@string/password"
                    android:textColorHint="@color/colorPrimary"
                    android:inputType="textPassword"
                    android:padding="@dimen/dimen_10dp" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_80dp"
                android:background="@android:color/holo_orange_dark"
                android:backgroundTint="@color/colorPrimary"
                android:foregroundGravity="center"
                app:cardCornerRadius="@dimen/activity_vertical_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/form"
                app:layout_constraintVertical_bias="0.2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="Login"
                    android:padding="@dimen/dimen_5dp"
                    android:textColor="@android:color/white"
                    android:textSize="25sp" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="5dp"
                android:layout_marginBottom="@dimen/dimen_10dp"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>